--- a/docs/java/3.md
+++ b/docs/java/3.md
@@ -34,11 +34,11 @@ Hello, World!
 
 * * *
 
-## Java HelloWorld 程序有效吗？
+## Java 程序 HelloWorld 是如何工作的？
 
 1.  `// Your First Program`
 
-    在 Java 中，任何以`//`开头的行都是注释。 注释旨在供用户阅读代码以更好地了解程序的意图和功能。 Java 编译器（将 Java 程序转换为计算机可执行的 Java 字节码的应用）将完全忽略它。 要了解更多信息，请访问 [Java 注释](/java-programming/comments)。
+    在 Java 中，任何以`//`开头的行都是注释。 注释是为了让用户在阅读代码时了解程序的意图和功能。 Java 编译器（将 Java 程序转换为计算机可执行的 Java 字节码的应用）将完全忽略它。 要了解更多信息，请访问 [Java 注释](/java-programming/comments)。
 2.  `class HelloWorld { ... }`
 
     在 Java 中，每个应用均以类定义开头。 在程序中，`HelloWorld`是类的名称，而类定义是：
@@ -49,12 +49,12 @@ Hello, World!
     }
     ```
 
-    现在，请记住每个 Java 应用都有一个类定义以及该类的名称。 应该与 Java 中的文件名匹配。
+    现在，请记住每个 Java 应用都有一个类定义，并且该类的名称应该与 Java 中的文件名匹配。
 3.  `public static void main(String[] args) { ... }`
 
-    这是`main`方法。 Java 中的每个应用都必须包含`main`方法。 Java 编译器开始从`main`方法执行代码。
+    这是`main`方法。 Java 中的每个应用都必须包含`main`方法。 Java 编译器从`main`方法开始执行代码。
 
-    **它是如何工作的？** 好问题。 但是，我们将不在本文中讨论。 毕竟，这是将 Java 编程语言引入新手的基本程序。 我们将学习`public`，`static`，`void`和[的含义方法如何工作](/java-programming/methods)？ 在后面的章节中。
+    **它是如何工作的？** 好问题。 但是，我们将不在本文中讨论。 毕竟，这是一个向新手介绍Java编程语言的基本程序。 我们将在后面的章节中学习`public`，`static`，`void`和[方法是如何工作的](/java-programming/methods)。
 
     现在，只需记住`main`函数是 Java 应用的入口点，并且它在 Java 程序中是必需的。 Java 中`main`方法的签名为：
 
@@ -66,7 +66,9 @@ Hello, World!
 
 4.  `System.out.println("Hello, World!");`
 
-    以下代码将引号`Hello, World!`中的字符串打印到标准输出（您的屏幕）。 注意，该语句位于`main`函数内部，该函数位于类定义内部。
+    上方代码是`print`语句。它将文本`Hello, World!`输出到控制台（你的屏幕）。引号内的文本在Java中称为[字符串](/java-programming/string)。
+    
+    注意，该语句位于`main`函数内部，`main`函数位于类定义内部。
 
 * * *
 
